--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
       text-decoration: none;
       font-weight: bold;
     }
+    section.page {
+      padding: 60px 20px;
+      max-width: 900px;
+      margin: auto;
+      text-align: left;
+    }
+    section.page h2 {
+      font-size: 2em;
+      margin-bottom: 20px;
+      color: #f8b500;
+    }
+    section.page p {
+      margin-bottom: 15px;
+      line-height: 1.6;
+    }
     footer {
       text-align: center;
       padding: 20px;
@@ -76,9 +91,37 @@
     <p>Welcome to KidPuff — the cartoon-based nebulizer that makes every breath a breeze.</p>
     <a href="product.html" class="button">Explore Our Product</a>
   </header>
+  <section class="page" id="about">
+    <h2>About KidPuff</h2>
+    <p>KidPuff is a healthcare innovation designed to reduce the fear and discomfort children experience during respiratory treatments. Founded by Dhannajay Yadav, our mission is to make nebulization fun, engaging, and stress-free.</p>
+    <p>We're inspired by the belief that health tech should be friendly — especially for kids. With playful cartoon-themed designs and trusted medical quality, KidPuff brings comfort to families and care providers alike.</p>
+  </section>
+  <section class="page" id="product">
+    <h2>Our Product</h2>
+    <p>KidPuff is a compact, portable nebulizer specially built for children. It includes:</p>
+    <ul>
+      <li>✨ Cartoon-themed casing (e.g. animals, superheroes)</li>
+      <li>💨 Quiet and efficient mist delivery</li>
+      <li>🎒 Lightweight & easy to carry</li>
+      <li>🛡️ Safe, durable and kid-approved</li>
+    </ul>
+    <p>Coming soon for both home and hospital use!</p>
+  </section>
+  <section class="page" id="faqs">
+    <h2>FAQs</h2>
+    <p><strong>Q: Is KidPuff safe for toddlers?</strong><br>A: Yes! It's designed with gentle airflow and BPA-free materials.</p>
+    <p><strong>Q: When will it be available?</strong><br>A: We plan to launch our first batch within the next few months.</p>
+    <p><strong>Q: Where can I buy it?</strong><br>A: You’ll be able to order directly from our website soon!</p>
+  </section>
+  <section class="page" id="contact">
+    <h2>Contact Us</h2>
+    <p>Want to collaborate, invest, or join the KidPuff journey?</p>
+    <p>Email: <a href="mailto:dhannajayyadav302@gmail.com">dhannajayyadav302@gmail.com</a><br>
+       Instagram: <a href="https://instagram.com">@kidpuff</a><br>
+       Phone: 8503802336</p>
+  </section>
   <footer>
     &copy; 2025 KidPuff | All Rights Reserved
   </footer>
 </body>
 </html>
- 
