--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   </section>
   <section class="page" id="contact">
     <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/mwkgbnvn" method="POST">
+    <form action= "https://formspree.io/f/xnndyvjj" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
       <textarea name="message" rows="5" placeholder="Your Message"></textarea>
