--- a/index.html
+++ b/index.html
@@ -171,11 +171,20 @@
   </section>
   <section class="page" id="contact">
     <h2>Contact Us</h2>
-    <form action= "https://formspree.io/f/xnndyvjj" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Your Message"></textarea>
-      <button type="submit">Send Message</button>
+   <form action="https://formspree.io/f/xnndyvjj" method="POST" class="space-y-4">
+  <div>
+    <label for="name" class="block text-sm font-medium text-gray-700">Your Name</label>
+    <input type="text" name="name" id="name" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
+  </div>
+  <div>
+    <label for="email" class="block text-sm font-medium text-gray-700">Your Email</label>
+    <input type="email" name="email" id="email" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
+  </div>
+  <div>
+    <label for="message" class="block text-sm font-medium text-gray-700">Your Message</label>
+    <textarea name="message" id="message" rows="4" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500"></textarea>
+  </div>
+  <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600">Send</button>
     </form>
     <p style="margin-top:20px;">Or reach us directly:<br>
       Email: <a href="mailto:dhannajayyadav302@gmail.com">dhannajayyadav302@gmail.com</a><br>
